--- a/css/icon.css
+++ b/css/icon.css
@@ -17,3 +17,9 @@
 
 .icon-collection_fill:before { content: "\e6ea"; }
 
+.icon {
+   width: 1em; height: 1em;
+   vertical-align: -0.15em;
+   fill: currentColor;
+   overflow: hidden;
+}
